fixed zoom icon to horizontally align in the events

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -976,6 +976,13 @@ section {
   transform: scale(1.1);
 }
 
+.preview-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%; /* To horizontally center the icon */
+}
+
 /*--------------------------------------------------------------
 # Testimonials Section
 --------------------------------------------------------------*/
